--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </div>
 
     <div id="game-message"></div>
+
+    <div id="duel-game" class="game-grid" aria-label="Duel memory game" style="display:none;"></div>
   </div>
 
   <!-- Winner Screen -->
